# clinical-super-mri

./: README.md  predict.py  pyproject.toml  requirements.txt  setup.sh  train.py
data/: .gitignore  README.md  mat2npy.py
misc/: .gitignore  plot_scans.py  test_torchio.py  visualize_MRI.ipynb
src/supermri/critic/: __init__.py  critic.py  dcgan.py  dense.py
src/supermri/data/: data.py
src/supermri/metrics/: metrics.py
src/supermri/models/: __init__.py  identity.py  mlp.py  registry.py  unet.py  utils.py
src/supermri/utils/: attention_gate.py  early_stopping.py  gradcam.py  tensorboard.py  utils.py
